- React 3D Fiber! - R3F is great, but currently I am paying a performance cost to use it, mostly because I am recreating too much scene information in every frame. Ideally, you don't want the frame callback to generate that much data, but to manipulate data that is already in the scene. That will require some thought, given the dynamic nature of this application - some UI touchups, make dark/light mode work better - fix pre commit hooks

--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,11 @@ div#inference {
   grid-gap: 10px;
 }
 
-#the-canvas {
+#plot-container {
   width: 400px;
   height: 400px;
   position: relative;
+  background-color: #ccc;
 }
 
 
@@ -58,7 +59,13 @@ span.posterior {
 }
 
 @media (prefers-color-scheme: dark) {
-  div#model-components {
-    color: #222;
+  div.value-group {
+    background-color: #234;
+  }
+  span.posterior {
+    color: #0a0;
+  }
+  div.prior-component-title {
+    background-color: #333;
   }
 }
